# lexo

./: .env.example  .gitignore  01_webpage_summarizer.ipynb  02_brochure_generator.ipynb  03_tech_explainer.ipynb  04_tribot_debate.ipynb  05_weathermate_ai_agent.ipynb  06_meeting_minute_assistant.ipynb  07_data_generator.ipynb  08_rag_qa_assistant.ipynb  09_part1_data_curation.ipynb  09_part2_tradml_vs_frontier.ipynb  09_part3_e5embeddings_rag.ipynb  09_part4_ft_gpt4omini.ipynb  09_part5_llama31_8b_quant.ipynb  09_part6_ft_llama_qlora.ipynb  09_part7_eval_llama_qlora.ipynb  09_part8_summary.ipynb  10_part1_ensemble_model.ipynb  10_part2_modal.ipynb  Dockerfile  Makefile  README.md  pyproject.toml
docs/: index.html
