[project]
name = "lexo"
version = "0.1.0"
description = "LLM toolkit for RAG, tuning, agents, and more"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv",
  "openai",
  "ipykernel",
  "ollama>=0.5.1",
  "anthropic>=0.52.2",
  "gradio>=5.32.1",
  "ipywidgets>=8.1.7",
  "jupyter>=1.1.1",
  "langchain>=0.3.25",
  "langchain-community>=0.3.24",
  "langchain-openai>=0.3.19",
  "pypdf>=5.6.0",
  "langchain-chroma>=0.2.4",
  "plotly>=6.1.2",
  "scikit-learn>=1.6.1",
  "datasets>=3.6.0",
  "matplotlib>=3.10.3",
]
